# python-mcp-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  openapi.json  pyproject.toml  search.html
.github/workflows/: changelog.yaml  docker_image.yaml  github_pages.yaml  unitest.yaml
docs/reference/: api.md  endpoints.md  endpoints_swagger.md  models.md
mcp_tools/: demo-stdio.py  demo-streamable-http.py  main.py  main_http.py  schemas.py
reference/endpoints/: index.html
reference/endpoints_swagger/: index.html
reference/models/: index.html
scripts/: ai_agent.py  build_docs.sh  build_image.sh  export_openapi.py  gen_ref_pages.py  openapi_to_markdown.py  security_fail_if_issues.sh  security_scan_bandit.sh
search/: search_index.json
tests/: test_api.py
