[project]
name = "python-mcp-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.5",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "neoteroi-mkdocs>=1.1.3",
]
