[project]
name = "python-mcp-template"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.5",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[tool.commitizen]
name = "cz_conventional_commits"  # Use the Conventional Commits standard
tag_format = "v$version"          # Customize the git tag format
version_scheme = "pep440"         # Follow PEP 440 for versioning
version_provider = "pep621"       # Get the version from pyproject.toml
update_changelog_on_bump = true   # Auto-update CHANGELOG.md on version bump

[dependency-groups]
commit = [
    "commitizen>=4.10.0",
]
dev = [
    "bandit>=1.9.2",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "neoteroi-mkdocs>=1.1.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "smolagents[toolkit]>=1.23.0",
]
